@@ -1,3 +1,3 @@
 *-bk
 *trash
-
+.DS_Store
