@@ -1,0 +1,18 @@
+
+<style>
+  .i20221116-header {
+    color: grb(84, 89, 95);
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
+    font-size: 1.625 rem;
+    line-height: 1;
+  }
+  </style>
+  <div class="i20221116-header" >
+    <h2 class="" >
+      Issue Dec'22
+      &nbsp; &nbsp; <span style="font-size: 0.7em">Past issues: <a href='/home-age'><u>Nov'22</a></span>
+    </h2>
+  </div>
