@@ -5,3 +5,4 @@
         2022-05-24 - moved other assets here from dropbox.
         2022-08-11 - slight improvement to styling of articles
 0.4.0 - 2022-09-24 - NFT's category displays better cards
+        2022-11-28 - added tag cloud
